crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/unencapsulated_asset.usdz
version https://git-lfs.github.com/spec/v1
oid sha256:a141434afc7c0c93103ab3b069a0a929ea2cb9dbe570f1299e2d156db2a3da17
size 258
